<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sleeping Data</string>
    <string name="create_button">Create New</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    
    <string name="dismiss">Dismiss</string>
    
    <string name="enter">Enter</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="input">Input</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="finish">Finish</string>
    
    
    <string name="enter_name">Please enter a valid name</string>
    <string name="enter_name_for_all_questions">Please enter a name for all questions</string>
    <string name="confirm_delete">Do you want to delete this?</string>
    <string name="confirm_clear">Do you want to clear this?</string>
    <string name="new_category_name">Name of new category?</string>
    
    <string name="enter_new_name">Enter the name</string>
    <string name="change_name">Change the name</string>
    
    <string name="name_unentered">Please enter a name</string>
    <string name="name_invalid_characters">The name cannot contain the character \'/\'</string>
    <string name="name_already_used">Cannot use the name, has already been used</string>
    <string name="name_cannot_start_space">The name cannot start with a space</string>
    
    <string name="question_name">Question name</string>
    <string name="question_create_new">Insert question</string>
    <string name="question_create_new_append">Append question</string>
    <string name="question_delete">Delete</string>
    <string name="question_position">Position to place the new question</string>
    <string name="question_position_short">Position</string>
    <string name="question_range_info" formatted="true">Place new at position (%1$d - %2$d)</string>
    <string name="question_position_invalid">That position is invalid</string>
    <string name="question_add_data">Add data to earlier inputs</string>
    <string name="question_temp_save">Temporarily Saved</string>
    <string name="cannot_contain_comma">Cannot contain commas</string>
    
    <string name="no_questions">There must be at least 1 question</string>
    <string name="data_enter">Enter data</string>
    <string name="data_must_be_entered">All data must have some value entered</string>
    <string name="save_successful">Saved</string>
    <string name="save_failed">Save failed</string>
    
    <string name="help_how_to_use">How to use:</string>
    <string name="help_how_to_use_1">To create a new </string>
    <string name="help_how_to_use_2">To create a new </string>
    <string name="help_how_to_use_3">To create a new </string>
    <string name="help_how_to_use_4">To create a new </string>
    
    <string name="help_how_to_import_into_excel">How to import data into excel</string>
    <string name="help_how_to_import_into_excel_1">1) Copy the text file containing the category:</string>
    <string name="help_how_to_import_into_excel_1a">1a) The file is stored on your device in the directory \'Save Data\', and will be the name of the category.</string>
    <string name="help_how_to_import_into_excel_1b">1b) You can access this file by plugging your device into a computer and copying the file, uploading the file using Dropbox, or other means.</string>
    <string name="help_how_to_import_into_excel_2">2) Once the text file is on your computer (or, if you have excel on your device), you can then import the data into excel.</string>
    <string name="help_how_to_import_into_excel_3">3) On the top of excel, select the \'Data\' tab, and then click on the button near the called \'From Text\'.</string>
    <string name="help_how_to_import_into_excel_4">4) Locate the text file in your computer, select it, and then press \'import\'.</string>
    <string name="help_how_to_import_into_excel_5">5) Make sure that the option \'Delimited\' has been selected, rather than \'Fixed widget\', and press Next.</string>
    <string name="help_how_to_import_into_excel_6">6) Inside of the box labed \'Delimiters\', select \'Comma\', and press Finish.</string>
    <string name="help_how_to_import_into_excel_7">7) Finally, select the cell that you want to contain the top right of the __inforation__, and press OK.</string>
    
    <string name="question_type_single_line">Single Line</string>
    <string name="question_type_paragraph">Paragraph</string>
    <string name="question_type_ten_scale">Ten Scale</string>
    <string name="question_type_time">Time</string>
    <string name="question_type_yes_no">T/F</string>
    
    <string name="single_line_hint">Enter a single line</string>
    <string name="paragraph_hint">Enter a paragraph</string>
    <string name="ten_scale_hint">Scale from 1 to 10</string>
    <string name="time_hint">Enter date (DD/MM/YYYY)</string>
    <string name="change_category_name">Change Category Name</string>
    

    <string name="never_changed">This category has never been edited.</string>
    <string name="date_changed" formatted="true">Last Edited %1$s</string>
</resources>
