<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >
        
    <TextView
        android:id="@+id/inputGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true" 
        android:layout_centerHorizontal="true"
        android:text="inputGroupName" />
     

     <TextView
         android:id="@+id/numberOfPrompts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/inputGroupName"
         android:layout_marginTop="30dp"
         android:text="numberOfPrompts"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/numberOfDataPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/numberOfPrompts"
         android:layout_marginTop="20dp"
         android:text="numberOfDataPoints"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <LinearLayout
         android:id="@+id/buttonRow"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         style="?android:attr/buttonBarStyle"
         android:layout_alignParentBottom="true" >
         
         <Button
             android:id="@+id/deleteButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/delete"
             android:onClick="deleteButtonClicked"
             style="?android:attr/buttonBarButtonStyle" />
         
         <Button
             android:id="@+id/changeButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/change"
             android:onClick="changeButtonClicked"
             style="?android:attr/buttonBarButtonStyle" />
         
         <Button
             android:id="@+id/inputButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/input"
             android:onClick="inputButtonClicked"
             style="?android:attr/buttonBarButtonStyle" />
     </LinearLayout>
     
</RelativeLayout>
